<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="tab_program_runner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@drawable/gradientbg1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:animateLayoutChanges="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:scrollbars="vertical">

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:background="#1f4037">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/programs"
                    android:textColor="#fff"
                    android:layout_gravity="center_vertical"/>

                <Spinner
                    android:id="@+id/programSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/newProgram"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/roundedbtn2"
                    android:text="@string/newStr"
                    android:textColor="#fff"
                    android:textAllCaps="false"
                    android:minWidth="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"/>

                <Button
                    android:background="@drawable/roundedbtn2"
                    android:id="@+id/editProgram"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:textColor="#fff"
                    android:textAllCaps="false"
                    android:minWidth="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/edit" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/startStopProgram"
                style="@style/Widget.AppCompat.Button.AddButton"
                android:background="@drawable/roundedbtn2"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:text="@string/start_program" />

            <TextView
                android:id="@+id/programListTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="3dp"
                android:textColor="#fff"
                android:background="#1f4037"
                android:text="@string/program_preview" />

        </LinearLayout>

        <ListView
            android:id="@+id/listProgramRecord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="false"
            android:background="#1f4037"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:fastScrollEnabled="false"
            android:isScrollContainer="false"
            android:scrollbars="none"
            tools:ignore="NestedScrolling" />

        <TextView
            android:id="@+id/listProgramEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_program_is_empty"
            android:textColor="#fff"
            android:gravity="center"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>
