<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#1f4037">

    <FileAntoniom.antoniom.chmeter.Chronometer
        android:id="@+id/chronoValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:keepScreenOn="true"
        tools:text="00:00"
       tools:textColor="#fff"
        android:textSize="@dimen/abc_text_size_display_3_material"
       />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#1f4037"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_startstop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/roundedbtn2"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/start"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_reset"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/roundedbtn2"
            android:textAllCaps="false"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/reset"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_exit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/roundedbtn2"
            android:clickable="true"
            android:textAllCaps="false"
            android:focusable="true"
            android:text="@string/exit"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
