<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:name="tab_graph"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/gradientbg2">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp">

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:background="#1f4037">

                <TableRow android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/MachineLabel"
                        android:textColor="#fff"/>

                    <Spinner
                        android:id="@+id/filterGraphMachine"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/FunctionLabel"
                        android:textColor="#fff"/>

                    <Spinner
                        android:id="@+id/filterGraphFunction"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/graph_functions"
                        />
                </TableRow>

            </TableLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/graphZoomSelector"
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/allbutton"
                style="@style/Widget.AppCompat.Button.AddButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dip"
                android:layout_marginRight="3dip"
                android:layout_marginBottom="0dip"
                android:layout_weight="40"
                android:text="@string/graph_all"
                android:textColor="#fff"
                android:background="@drawable/roundedbtn2"
                android:textSize="12sp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/lastyearbutton"
                style="@style/Widget.AppCompat.Button.AddButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dip"
                android:layout_marginRight="3dip"
                android:layout_marginBottom="0dip"
                android:layout_weight="40"
                android:text="@string/graph_lastyear"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:background="@drawable/roundedbtn2"
                android:textSize="12sp" />

            <Button
                android:id="@+id/lastmonthbutton"
                style="@style/Widget.AppCompat.Button.AddButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dip"
                android:layout_marginRight="3dip"
                android:layout_marginBottom="0dip"
                android:layout_weight="40"
                android:text="@string/graph_lastmonth"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:background="@drawable/roundedbtn2"
                />

            <Button
                android:id="@+id/lastweekbutton"
                style="@style/Widget.AppCompat.Button.AddButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dip"
                android:layout_marginRight="3dip"
                android:layout_marginBottom="0dip"
                android:layout_weight="40"
                android:text="@string/graph_lastweek"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:background="@drawable/roundedbtn2"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/graphLineChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:minHeight="150dp"
                android:background="#1f4037"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/graphBarChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:minHeight="150dp"
                android:visibility="gone" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
